front-end: Fix name visibility/clock, add draggable ability.

--- a/css/main_screen_1.css
+++ b/css/main_screen_1.css
@@ -19,17 +19,17 @@
   height: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(0,0,0,0) 0%,
-    rgba(20,18,60,0.25) 30%,
-    rgba(40,30,90,0.55) 60%,
-    rgba(54,42,132,0.9) 85%,
-    rgba(54,42,132,1) 100%
-);
+    rgba(0, 0, 0, 0) 0%,
+    rgba(20, 18, 60, 0.25) 30%,
+    rgba(40, 30, 90, 0.55) 60%,
+    rgba(54, 42, 132, 0.9) 85%,
+    rgba(54, 42, 132, 1) 100%
+  );
 }
 
 .main-screen-1-weather-info {
   width: 100%;
-  max-width: max-content;
+  max-width: 400px;
   height: max-content;
   display: flex;
   justify-content: center;
@@ -39,13 +39,45 @@
 }
 
 .main-screen-1-weather-city {
-  width: 80%;
-  text-align: center;
+  width: 100%;
   overflow: hidden;
   white-space: nowrap;
+  padding: 0 20px;
+  box-sizing: border-box;
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
+  );
+}
+
+.main-screen-1-weather-city-h1 {
+  font-weight: 600;
   font-size: 30px;
   display: inline-block;
-  font-weight: 600;
+  position: relative;
+}
+
+.main-screen-1-weather-city.centered {
+  text-align: center;
+}
+
+.main-screen-1-weather-city-h1.smoothed {
+  text-align: center;
+  animation: smooth-slide 3s ease-in infinite alternate;
+}
+
+@keyframes smooth-slide {
+  0% {
+    transform: translateX(0%);
+    left: 0%;
+  }
+  100% {
+    transform: translateX(-100%);
+    left: 100%;
+  }
 }
 
 .main-screen-1-weather-celsius {
@@ -123,9 +155,9 @@
   transform: translate(-50%);
   background: radial-gradient(
     circle at 30% 30%,
-    rgba(40,30,90,0.55) 0%,
-    rgba(54,42,132,0.9) 40%,
-    rgba(54,42,132,1) 100%
+    rgba(40, 30, 90, 0.55) 0%,
+    rgba(54, 42, 132, 0.9) 40%,
+    rgba(54, 42, 132, 1) 100%
   );
   width: 30%;
   height: 3px;
@@ -133,9 +165,9 @@
     left 0.45s ease,
     transform 0.45s ease;
   box-shadow:
-    0 0 3px rgba(40,30,90,0.55),
-    0 0 7px rgba(54,42,132,0.9),
-    0 0 12px rgba(54,42,132,1);
+    0 0 3px rgba(40, 30, 90, 0.55),
+    0 0 7px rgba(54, 42, 132, 0.9),
+    0 0 12px rgba(54, 42, 132, 1);
 
   animation: neonPulse 2s infinite ease-in-out;
 }
@@ -220,7 +252,7 @@
 }
 
 .main-screen-1-weather-schedule-results-result.highlighted {
-   background: linear-gradient(145deg, #5936b4 0%, #4a329c 40%, #362a84 100%);
+  background: linear-gradient(145deg, #5936b4 0%, #4a329c 40%, #362a84 100%);
 }
 
 .main-screen-1-weather-schedule-results-result-weather-icon img {
@@ -289,4 +321,8 @@
 .main-screen-1-weather-schedule-btns-bars-btn i {
   color: var(--main-text);
   font-size: 20px;
+}
+
+@media only screen and (min-width: 1000px) {
+  
 }
